src/test/deca/context/invalid/ContextSansObjet/OperationsBooleennes/Or_String.deca
//Description :
//	Vérification contextuelle de la sortie de l'opérateur || (différente de string). Si le résultat générait un string il serait affichable.
//
//Résultats :
//	Erreur Contextuelle
//  Ligne 10 : Le type boolean n'est pas affichable (les types affichables sont int,float et string)

{
    boolean x = true;
    println(x || false);
}